<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taxis Libres</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirmat">Solicitar Taxi</string>
    <string name="Mensaje">Enviar Mensaje</string>
    <color name="white">#FFFFFF</color>
    
    
    
     <string name="text_please_fix_data_payment">Registrar datos de pago electronico</string>
    <string name="lbl_payment_usercode">Codigo de Usuario</string>
    
    <string name="lbl_payment_password">Contraseña</string>
    
    
    
    <!-- Etiquetas de los Botones -->
    <string name="btn_positive">Si</string>
    <string name="btn_negative">No</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_close">Cerrar</string>
    <string name="btn_request">Solicitar vehículo</string>
    <string name="btn_more">Mas &#8230;</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_gps_configure">Configurar GPS</string>
    <string name="btn_my_location">Mi ubicación</string>
    <string name="btn_show_map">Mapa</string>
    <string name="btn_qualify">Calificar Servicio</string>
    
    <!-- Texto de ejemplo -->
    <string name="sample_text">Sample Text</string>
    <string name="sample_vehicle">CSR123</string>
    <string name="sample_distance">2.8 Km</string>
    <string name="sample_time">1.3 min</string>
    <string name="sample_key">1234</string>
    <string name="sample_money_value">$ 0</string>
    
    <string name="lbl_driver_vehicle">Placa</string>
    <string name="lbl_trademark">Marca</string>
    <string name="lbl_left_distance">Distancia</string>
    
     <string name="separator">&#58;</string>
     
     <string name="lbl_estimated_value">Valor a pagar &#58;</string>
     
     <string name="lbl_key_service">Clave&#58;</string>
     
     <string name="text_confirm_payment">Confirme su contraseña para realizar el pago del servicio</string>
     
      <string name="error_field_required">Este campo es requerido</string>
    <string name="lbl_yearformat">YY</string>
    <string name="lbl_monthformat">MM</string>
    
    <string name="action_menu">Menu</string>
    <string name="action_help">Ayuda</string>

</resources>