<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/layoutRegisterVale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PAGO CON CUPO ELECTRONICO"
            android:textSize="18dp"
            android:textColor="#000" />
	    
	    <EditText
	        android:id="@+id/usercodevale"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="16dp"
	        android:hint="@string/lbl_payment_usercode"
	        android:inputType="textCapWords" />
	    
	    <EditText
	        android:id="@+id/passwordvale"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="16dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="4dp"
	        android:hint="@string/lbl_payment_password"
	        android:inputType="textCapWords" />
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_gravity="center"
	        >

	        <Button
	            android:id="@+id/button_cancel_register_paymentMethod"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:text="@string/btn_cancel"
	            android:onClick="Cancelar" />

	        
	        <Button
	            android:id="@+id/button_register_paymentMethod"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="20dp"
	            android:text="@string/btn_register" 
	            android:onClick="RegistroVale"/>
	    </LinearLayout>
	</LinearLayout>
    
    

</LinearLayout>
