<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".PaymentActivity" >


	<LinearLayout
        android:id="@+id/layoutRegisterTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical" >
        
	    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTRO TARJETA DE CREDITO"
            android:layout_gravity="center"
            android:textColor="#000" />
	    
	    <RelativeLayout
	        android:id="@+id/basic_info_driver"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingLeft="15dp" >

	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >

	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="NOMBRE(Como aparece en tu Tarjeta)"
	                android:layout_gravity="center"
	                android:textColor="#000000"
	                android:textStyle="bold" />

	            <EditText
	                android:id="@+id/nombretarjeta"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                 android:ems="10"
	                android:inputType="text" >

	                <requestFocus />
	            </EditText>

	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="TARJETA NUMERO"
	                android:layout_gravity="center"
	                android:textColor="#000000"
	                android:textStyle="bold" />

	            <EditText
	                android:id="@+id/numerotarjeta"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="phone" />

	            <TextView
	                android:id="@+id/textView6"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="CVV(CODIGO DE SEGURIDAD)"
	                android:textColor="#000000"
	                android:textStyle="bold" />

	            <EditText
	                android:id="@+id/codigoseguridad"
	                android:layout_width="102dp"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="phone" />

	        </LinearLayout>

	    </RelativeLayout>
	    <LinearLayout
	        android:id="@+id/Layout_DistanceTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingLeft="15dp"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/fechavencimiento"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:text="FECHA VENCIMIENTO"
	            android:textColor="#000000"
	            android:textStyle="bold" />
			<LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        	<EditText
	        		android:id="@+id/yearvenc"
	            	android:layout_width="75dp"
	           		android:layout_height="wrap_content"
	            	android:hint="@string/lbl_yearformat"
	            	android:ems="10"
	            	android:inputType="phone" />
	        	
	        	<EditText
	        		android:id="@+id/mesvenc"
	            	android:layout_width="75dp"
	           		android:layout_height="wrap_content"
	            	android:hint="@string/lbl_monthformat"
	            	android:ems="10"
	            	android:inputType="phone" />

	        
			</LinearLayout>
	    </LinearLayout>
	    

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="10dp"
	        android:layout_gravity="center"
	        >

	        <Button
	            android:id="@+id/button_cancel_register_paymentMethod"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:text="@string/btn_cancel"
	            android:onClick="Cancelar" />

	        
	        <Button
	            android:id="@+id/button_register_paymentMethod"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="20dp"
	            android:text="@string/btn_register" 
	            android:onClick="RegistroTarjeta"/>
	    </LinearLayout>

	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/layoutProgressBar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="#ffffffff"
	    android:gravity="center"
	    android:orientation="vertical"
	    android:visibility="gone" >

		<ProgressBar
		    android:id="@+id/progressBar1"
		    style="?android:attr/progressBarStyleLarge"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:indeterminate="true" />

	</LinearLayout>
    
</LinearLayout>
